Feat:header footer.css

--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -1,10 +1,7 @@
-$primary: #A6776A;
-$second: #884A39;
-$second-2: #F6F1E9;
-$deep: #402020;
-$active: #E25603;
-$light: #D7C0AE;
-$orange: #FF8300;
-$text-grey: #434343;
-$text: #1A1A1A;
-$text-w: #FEFEFE;
+$color-primary: #B38F8A;
+//$color-second: #884A39;
+$color-title: #796562;
+$color-text: #434343;
+$color-bg: #FAF6F3;
+$color-tag: #ECE5DF;
+$color-white: #FFFFFF;
