--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,172 +1,3 @@
-@import 'variable';
-@import 'mixin';
-
-.home {
-    main {
-        position: relative;
-        top: -25vh;
-        margin-bottom: -25vh;
-        @include xl() {
-            top: -15vh;
-            margin-bottom: -15vh;
-        }
-        @include ml() {
-            top: -10vh;
-            margin-bottom: -10vh;
-        }
-        @include sm() {
-            top: -5vh;
-            margin-bottom: -5vh;
-        }
-    }
-    .index-video {
-        overflow: hidden;
-        position: sticky;
-        top: 0;
-        z-index: -1;
-        video {
-            width: 100%;
-        }
-    }
-    .index-block {
-        background-color: $text-w;
-        padding-top: 80px;
-        padding-bottom: 80px;
-        .slider {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            width: 100%;
-            &.desk {
-                display: flex !important;
-            }
-            &.mobile {
-                display: none !important;
-            }
-            @include md() {
-                &.desk {
-                    display: none !important;
-                }
-                &.mobile {
-                    display: flex !important;
-                }
-            }
-            li {
-                display: flex;
-                justify-content: center;
-                // min-width: calc(100% / 3);
-                .slider-warp {
-                    display: block;
-                    width: 90%;
-                }
-                .img {
-                    background-size: 100%;
-                    background-position: center center;
-                    background-repeat: no-repeat;
-                    width: 100%;
-                    height: 0;
-                    padding: 75% 0;
-                    position: relative;
-                    transition: 0.4s;
-                    &::after {
-                        content: 'more.';
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        color: $second-2;
-                        background-color: rgba($text, 0.75);
-                        position: absolute;
-                        width: 100%;
-                        height: 100%;
-                        left: 0;
-                        top: 0;
-                        transition: 0.4s;
-                        opacity: 0;
-                    }
-                    &:hover{
-                        background-size: 110%;
-                        &::after {
-                            opacity: 1;
-                        }
-                    }
-                }
-                .title {
-                    @include word-count(1);
-                    font-size: 18px;
-                }
-                .desc {
-                    color: $text;
-                    @include word-count(3);
-                    margin-top: 30px;
-                    font-size: 16px;
-                    line-height: 2;
-                }
-                .title {
-                    color: $text;
-                    margin-top: 15px;
-                    line-height: 1.8;
-                }
-            }
-        }
-        .btn-warp {
-            text-align: center;
-            .btn {
-                margin-top: 65px;
-                display: inline-block;
-            }
-        }
-        &.latest-works {
-            .slider {
-                li {
-                    .desc {
-                        font-size: 18px;
-                    }
-                } 
-            } 
-        }
-        &.popular-stylist {
-            .slider {
-                li {
-                    .desc {
-                        margin-top: 15px;
-                        font-family: 'NotoSerifTC-Regular.otf';
-                    }
-                } 
-            } 
-        }
-        &.styling-lazy-bag {
-            .slider {
-                li {
-                    .title {
-                        @include word-count(2);
-                        font-size: 18px;
-                    }
-                    .img {
-                        padding: 35% 0;
-                    }
-                } 
-            } 
-        }
-        &.activity-information, &.styling-column {
-            .slider {
-                li {
-                    .title {
-                        @include word-count(2);
-                        font-size: 20px;
-                    }
-                    .img {
-                        padding: 35% 0;
-                    }
-                    .desc {
-                        margin-top: 10px;
-                        font-size: 16px;
-                    }
-                } 
-            } 
-        }
-        &.styling-column {
-            padding-bottom: 160px;
-        }
-    }
-}
+@import 'main';
+@import 'home';
 
