--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -73,6 +73,9 @@ body {
   background-color: $color-bg;
   font-size: 16px;
   letter-spacing: 2px;
+  @include lg() {
+    padding-top: 74px;
+  }
 }
 
 ul, ol {
@@ -139,12 +142,12 @@ img {
   }
 }
 
-.w-30 {
-  width: 30%;
+.w-20 {
+  width: 20%;
 }
 
-.w-70 {
-  width: 70%;
+.w-80 {
+  width: 80%;
 }
 
 .hr {
@@ -179,6 +182,9 @@ header {
   transition: 1s;
   background-color: transparent;
   z-index: 10;
+  @include lg {
+    position: fixed;
+  }
 
   nav {
     background-color: $color-bg;
@@ -193,12 +199,6 @@ header {
       padding: 17px 24px;
       flex-direction: row;
       justify-content: space-between;
-      //background-color: $color-primary;
-      //box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
-    }
-
-    &::after {
-
     }
   }
 
