--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -12,8 +12,8 @@
   background-position: center top;
   background-repeat: no-repeat;
   @include lg() {
-    height: 720px;
-    background-position: center;
+    height: 800px;
+    background-position: top center;
   }
 
   .container {
@@ -33,7 +33,7 @@
       color: $color-title;
       padding-bottom: 120px;
       @include lg() {
-        padding-bottom: 80px;
+        padding-bottom: 40px;
         line-height: 48px;
         text-align: right;
       }
@@ -51,19 +51,35 @@
 
 .service-block {
   padding: 120px 0;
-  box-shadow: inset 30vw 0 0 0 #B38F8A1A;
+  box-shadow: inset calc(50vw - 360px) 0 0 0 #B38F8A1A;
   @include lg() {
     padding: 80px 24px;
+    box-shadow: inset 40vw 0 0 0 #B38F8A1A;
   }
 
   .container {
     display: flex;
     justify-content: space-between;
+    @include lg() {
+      flex-direction: column;
+      .w-20 {
+        width: 100%;
+        flex-direction: row;
+        margin-bottom: 80px;
+      }
+      .w-80 {
+        width: 100%;
+        //justify-content: center;
+      }
+    }
   }
 
   .en-txt {
     padding-top: 80px;
     letter-spacing: 4px;
+    @include lg() {
+      padding-top: 0;
+    }
   }
 }
 
@@ -72,6 +88,9 @@
   flex-direction: column;
   margin-left: 40px;
   margin-bottom: 40px;
+  //@include lg() {
+  //  margin-left: 0;
+  //}
 
   img {
     margin-bottom: 40px;
@@ -84,15 +103,15 @@
   }
 
   button {
-    color: $color-primary!important;
-    background-color: transparent!important;
-    box-shadow: transparent!important;
-    --tw-shadow: transparent!important;
+    color: $color-primary !important;
+    background-color: transparent !important;
+    box-shadow: transparent !important;
+    --tw-shadow: transparent !important;
     transition-duration: .3s;
 
     &:hover,
     &:active {
-      color: $color-title!important;
+      color: $color-title !important;
       background-color: transparent;
       box-shadow: transparent;
       --tw-shadow: transparent;
@@ -139,6 +158,8 @@
   opacity: .5;
   @include lg() {
     font-size: 48px;
+    writing-mode: unset;
+    text-orientation: upright;
   }
 }
 
