--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -121,6 +121,70 @@
   }
 }
 
+.process-block {
+  background-color: $color-tag;
+  padding: 120px 80px;
+
+  .title-tag {
+    background-color: $color-bg;
+    bottom: 24%;
+  }
+
+  .en-txt {
+    writing-mode: unset;
+    letter-spacing: 16px;
+    @include lg() {
+      letter-spacing: 12px;
+    }
+  }
+
+  @include lg() {
+    padding: 40px 24px;
+  }
+}
+
+.process-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 120px;
+  height: 120px;
+  margin: 0 16px 48px 16px;
+  border-radius: 100%;
+  background-color: $color-bg;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.10);
+  color: $color-title;
+  font-weight: bold;
+
+  @include md() {
+    width: 160px;
+    height: 160px;
+    margin: 0 0 48px 0;
+  }
+
+  .process-item-icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    background-color: $color-primary;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.10);
+
+  }
+
+  img {
+    width: 26px;
+    height: 26px;
+  }
+}
+
+
 .color-text {
   color: $color-text;
 }
@@ -141,7 +205,7 @@
   @include lg() {
     padding: 4px 6px;
     font-size: 18px;
-    bottom: 16px;
+    bottom: 24%;
     letter-spacing: 1.6px;
   }
 }
