--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -32,6 +32,7 @@
       line-height: 84px;
       color: $color-title;
       padding-bottom: 120px;
+      letter-spacing: 2px;
       @include lg() {
         padding-bottom: 40px;
         line-height: 48px;
@@ -66,6 +67,10 @@
         width: 100%;
         flex-direction: row;
         margin-bottom: 80px;
+
+        img {
+          min-width: 80px;
+        }
       }
       .w-80 {
         width: 100%;
@@ -148,9 +153,9 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 120px;
-  height: 120px;
-  margin: 0 16px 48px 16px;
+  width: 124px;
+  height: 124px;
+  margin: 0 12px 48px 12px;
   border-radius: 100%;
   background-color: $color-bg;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.10);
@@ -200,16 +205,16 @@
   height: auto;
   text-align: center;
   line-height: normal;
-  letter-spacing: 2.4px;
-  padding: 4px 24px;
+  letter-spacing: 3px;
+  padding: 4px 16px;
   background: $color-tag;
   color: $color-title;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   @include lg() {
-    padding: 4px 6px;
+    padding: 4px 12px;
     font-size: 18px;
-    bottom: 24%;
-    letter-spacing: 1.6px;
+    bottom: 20%;
+    letter-spacing: 2px;
   }
 }
 
@@ -227,6 +232,9 @@
     font-size: 48px;
     writing-mode: unset;
     text-orientation: upright;
+  }
+  @include sm() {
+    font-size: 36px;
   }
 }
 
