--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -50,6 +50,70 @@
   }
 }
 
+.contact-block {
+  padding: 120px 80px 0 80px;
+  display: flex;
+  width: 100%;
+  height: 710px;
+  background-image: url("./assets/img/banner-contact.png");
+  background-size: cover;
+  background-position: center top;
+  background-repeat: no-repeat;
+  @include lg() {
+    padding: 40px 24px;
+    height: 400px;
+    background-position: top center;
+  }
+
+  .h1 {
+    color: $color-primary;
+    line-height: 72px;
+    letter-spacing: 7.2px;
+
+    &:first-child {
+      color: $color-title;
+      margin-bottom: 80px;
+    }
+
+    @include lg() {
+      letter-spacing: 4px;
+      line-height: 48px;
+      &:first-child {
+        margin-bottom: 40px;
+      }
+    }
+  }
+}
+
+.btn-primary {
+  display: inline-flex;
+  padding: 16px 40px;
+  justify-content: center;
+  align-items: center;
+  width: max-content;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 2.4px;
+  margin: 40px 0;
+  background-color: $color-primary !important;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  transition: .3s;
+
+  &:hover,
+  &:active {
+    background-color: $color-bg !important;
+    color: $color-title;
+    transition-duration: .3s;
+    //color: $color-title !important;
+    //background-color: transparent;
+    //box-shadow: transparent;
+    //--tw-shadow: transparent;
+    //transform: translateX(10px);
+    //transition: .3s;
+  }
+}
+
 .service-block {
   padding: 120px 0;
   box-shadow: inset calc(50vw - 360px) 0 0 0 #B38F8A1A;
@@ -192,6 +256,31 @@
   }
 }
 
+.case-block {
+  padding: 120px 0;
+  background-color: rgba(179, 143, 138, 0.1);
+  box-shadow: inset 50vw -105vh 0 0 $color-bg;
+  @include lg() {
+    padding: 40px 24px;
+    box-shadow: inset 50vw -95vh 0 0 $color-bg;
+  }
+
+  .en-txt {
+    writing-mode: unset;
+    letter-spacing: 16px;
+    @include lg() {
+      letter-spacing: 12px;
+    }
+  }
+
+  .img-content {
+    margin-left: 0;
+  }
+
+  swiper-container {
+    padding-top: 80px;
+  }
+}
 
 .color-text {
   color: $color-text;
