--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -53,6 +53,7 @@
 .contact-block {
   padding: 120px 80px 0 80px;
   display: flex;
+  justify-content: center;
   width: 100%;
   height: 710px;
   background-image: url("./assets/img/banner-contact.png");
