--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -1,7 +1,10 @@
 $color-primary: rgba(179, 143, 138);
-//$color-second: #884A39;
+$color-second: #884A39;
 $color-title: #796562;
 $color-text: #434343;
 $color-bg: #FAF6F3;
 $color-tag: #ECE5DF;
 $color-white: #FFFFFF;
+.bg-tag{
+  background-color: $color-tag;
+}
