--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -132,6 +132,7 @@
   line-height: normal;
   letter-spacing: 2.4px;
   margin: 40px 0;
+  color: $color-white !important;
   background-color: $color-primary !important;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   transition: .3s;
@@ -139,7 +140,7 @@
   &:hover,
   &:active {
     background-color: $color-bg !important;
-    color: $color-title;
+    color: $color-title !important;
     transition-duration: .3s;
     //color: $color-title !important;
     //background-color: transparent;
