--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -134,7 +134,7 @@
   margin: 40px 0;
   color: $color-white !important;
   background-color: $color-primary !important;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   transition: .3s;
 
   &:hover,
