--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -1,4 +1,4 @@
-$color-primary: rgba(179, 143, 138);
+$color-primary: rgb(192 142 136);
 $color-second: #884A39;
 $color-title: #796562;
 $color-text: #434343;
