--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -5,7 +5,7 @@
 //案例說明
 .case {
   .case-block {
-    box-shadow: inset 50vw -180vh 0 0 $color-bg;
+    //box-shadow: inset 50vw -180vh 0 0 $color-bg;
   }
 
   .title {
