--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -604,9 +604,9 @@ footer {
     display: flex;
     align-items: start;
     justify-content: space-between;
-    padding: 40px 0;
+    padding: 24px 0;
     @include lg {
-      padding: 40px 24px;
+      padding: 24px;
       flex-direction: column;
       align-items: start;
     }
@@ -641,7 +641,7 @@ footer {
 
       &:last-child {
         width: 198px;
-        margin-right: 0;
+        margin-bottom: 0;
         @include ml {
           margin-right: 0;
         }
@@ -651,8 +651,8 @@ footer {
     .footer-title {
       font-size: 20px;
       font-weight: bold;
-      margin-bottom: 24px;
-      margin-top: 5px;
+      margin-bottom: 16px;
+      //margin-top: 5px;
       color: $color-white;
     }
 
@@ -662,28 +662,29 @@ footer {
       li {
         display: flex;
         justify-content: center;
-        width: 44px;
-        height: 44px;
-        min-width: 44px;
-        min-height: 44px;
+        width: 30px;
+        height: 30px;
+        min-width: 30px;
+        min-height: 30px;
         margin-left: 40px;
         margin-bottom: 40px;
-        background-color: $color-bg;
-        border-radius: 100%;
 
         &:first-child {
           margin-left: 0;
         }
 
         a {
+          transition: .3s;
           &:hover {
             opacity: 0.75;
+            transition-duration: .3s;
           }
 
           img {
-            width: 20px;
-            height: 20px;
+            width: 30px;
+            height: 30px;
             margin-top: 10px;
+            filter: brightness(100);
           }
         }
       }
@@ -699,10 +700,12 @@ footer {
 
         a {
           font-size: 16px;
+          transition: .3s;
           //color: $color-text;
 
           &:hover {
             opacity: 0.75;
+            transition-duration: .3s;
           }
         }
       }
