--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -86,11 +86,11 @@
 }
 
 .contact-block {
-  padding: 120px 80px 0 80px;
+  padding: 80px;
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 710px;
+  height: 600px;
   background-image: url("./assets/img/banner-contact.png");
   background-size: cover;
   background-position: center top;
