--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -716,8 +716,9 @@ footer {
     display: flex;
     justify-content: center;
     position: relative;
-    padding: 16px 0;
+    padding: 12px 0;
     border-top: 1px solid;
     width: 100vw;
+    font-size: 14px;
   }
 }
