--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -17,9 +17,9 @@
 
   .container {
     display: flex;
-    flex-direction: column;
+    //flex-direction: column;
+    justify-content:flex-end;
     text-align: center;
-    align-items: end;
     padding-top: 120px;
     @include lg() {
       padding: 80px 24px 0 24px;
@@ -32,6 +32,7 @@
       color: $color-title;
       padding-bottom: 120px;
       letter-spacing: 2px;
+      text-align: center;
       @include lg() {
         padding-bottom: 40px;
         line-height: 48px;
@@ -39,10 +40,12 @@
       }
     }
 
-    .h5 {
-      line-height: 60px;
+    .h4 {
+      text-align: center;
+      line-height: 48px;
       @include lg() {
         line-height: 36px;
+        font-size: 14px;
       }
     }
 
@@ -62,7 +65,10 @@
   }
 
   .container {
+    justify-content:center;
+    flex-direction: column;
     align-items: center;
+    padding-top: 0;
 
     h1 {
       font-style: normal;
@@ -142,12 +148,6 @@
     background-color: $color-bg !important;
     color: $color-title !important;
     transition-duration: .3s;
-    //color: $color-title !important;
-    //background-color: transparent;
-    //box-shadow: transparent;
-    //--tw-shadow: transparent;
-    //transform: translateX(10px);
-    //transition: .3s;
   }
 }
 
