--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -21,6 +21,7 @@
     justify-content:flex-end;
     text-align: center;
     padding-top: 120px;
+    padding-right: 80px;
     @include lg() {
       padding: 80px 24px 0 24px;
     }
@@ -194,9 +195,9 @@
   flex-direction: column;
   margin-left: 40px;
   margin-bottom: 40px;
-  //@include lg() {
-  //  margin-left: 0;
-  //}
+  @include sm() {
+    margin-left: 0;
+  }
 
   img {
     margin-bottom: 40px;
