--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -604,11 +604,11 @@ footer {
     display: flex;
     align-items: start;
     justify-content: space-between;
-    padding: 24px 0;
+    padding: 40px 0;
     @include lg {
-      padding: 24px 16px;
+      padding: 40px 24px;
       flex-direction: column;
-      align-items: start;
+      align-items: flex-start;
     }
 
     > div {
