--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -18,7 +18,7 @@
   .container {
     display: flex;
     //flex-direction: column;
-    justify-content:flex-end;
+    justify-content: flex-end;
     text-align: center;
     padding-top: 120px;
     padding-right: 80px;
@@ -66,7 +66,7 @@
   }
 
   .container {
-    justify-content:center;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
     padding-top: 0;
@@ -174,10 +174,9 @@
           min-width: 80px;
         }
       }
-      .w-80 {
-        width: 100%;
-        //justify-content: center;
-      }
+    }
+    @include lg() {
+      align-items: flex-end;
     }
   }
 
@@ -312,7 +311,7 @@
 
   @include lg() {
     padding: 40px 24px;
-    &::before{
+    &::before {
       height: 220px;
     }
   }
