--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -69,7 +69,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Noto Serif TC";
+  font-family: "Noto Serif TC", "Noto Serif", serif;
   color: $color-text;
   background-color: $color-bg;
   font-size: 16px;
@@ -397,7 +397,6 @@ header {
         border-radius: 100%;
         display: flex;
         flex-direction: column;
-        padding: 10px 5px;
         position: relative;
         justify-content: center;
         align-items: center;
